--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+:root {
+	--color1:white;
+}
+
 body, html {
 	height: 100%;
 	margin: 0;
@@ -170,3 +174,4 @@ body, html {
 
 /* RESEARCH POSITION IN CSS */
 /* css iterators by class */
+/* root, var */
